<resources>
    <string name="app_name">ShareClient</string>
    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="pause_button">Pause</string>
    <string name="napster_content_description">Napster Content Description</string>
    <string name="connect_to">Connect to...</string>
    <string name="settings">Settings...</string>
    <string name="backup_settings">Backup Settings</string>
    <string name="start_backup_if_free_space">Backup when available space(MB): </string>
    <string name="current_free_space">Device available space(MB): </string>
    <string name="delete_files_after_backup">Delete files after backup: </string>
    <string name="interval_check">Check for back every (sec)</string>
    <string name="connection_settings">Connectivity</string>
    <string name="file_server">File Server address(URL): </string>
    <string name="stream_server">Stream server address(http://URL)</string>
    <string name="backup_enabled">Backup Enabled:</string>
</resources>
